--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <p>
     Consider the roots for the equation `z^3 -1 = 0`. In the Real domain there
     is only a single solution:&nbsp;1. Over the complex plane however there are
-    two additonal roots: `-1/2 + sqrt(3)/2 i` and `-1/2 - sqrt(3)/2 i`. For any
-    starting complex number we can use Newton's method to succesively approach
+    two additional roots: `-1/2 + sqrt(3)/2 i` and `-1/2 - sqrt(3)/2 i`. For any
+    starting complex number we can use Newton's method to successively approach
     one of the roots. Newton's method is:
   </p>
 
@@ -55,16 +55,16 @@
   <p>
     Complex number division: Rationalize the denominator by multiplying the
     fraction with the conjugate of the denominator. A complex number multiplied
-    by it's conjugate will yeild a real number.
+    by it's conjugate will yield a real number.
   </p>
 
   <h2>Why did I write this?</h2>
   <p>
     It's a long story. One of my earliest joy of programming moments came from
     coding up  Newton's Method in QBASIC, when I was a teenager. Fractals where
-    "in" back then and once I learned what the Newton's Method fratal represented
+    "in" back then and once I learned what the Newton's Method fractal represented
     I was able to work out the math and kludge some code together to get it to
-    draw. Slowely.
+    draw. Slowly.
   </p>
   <script src="newton.js"></script>
 </body>
