--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   }
 </style>
 <script type="text/javascript"
-        src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML-full"></script>
+        src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=AM_HTMLorMML-full"></script>
 </head>
 <body>
   <h1>Newton's Method Fractal for z<sup>3</sup> - 1 = 0</h1>
